cop-3 adds cart-item, item quantity

--- a/src/services/i18n/locales/en/translation.json
+++ b/src/services/i18n/locales/en/translation.json
@@ -1,3 +1,10 @@
 {
-  "orderForm": "Order Form"
+  "orderForm": "Order Form",
+  "format": "Format",
+  "weight": "Weight",
+  "printSetting": "Print Setting",
+  "flipSetting": "Flip Setting",
+  "numberOfSets": "Number of Sets",
+  "bwPages": "Black & White Pages",
+  "colorPages": "Colour Pages"
 }
