cop-23: added i18n for en

--- a/src/services/i18n/locales/en/translation.json
+++ b/src/services/i18n/locales/en/translation.json
@@ -5,8 +5,10 @@
   "printSetting": "Print Setting",
   "flipSetting": "Flip Setting",
   "numberOfSets": "Number of Sets",
+  "pagesInPDF":"Pages in PDF",
   "bwPages": "Black & White Pages",
   "colorPages": "Colour Pages",
+  "nextStep": "Next Step",
   "cart": "Shopping Basket",
   "cartEmpty": "Your shopping basket is empty",
   "cart_total": "Total",
