cart page redux integration

--- a/src/services/i18n/locales/en/translation.json
+++ b/src/services/i18n/locales/en/translation.json
@@ -27,5 +27,6 @@
   "product": "Product",
   "options": "Options",
   "quantity": "Quantity",
-  "price": "Price"
+  "price": "Price",
+  "cart_empty": "Your shopping basket is empty"
 }
